--- a/example/index.html
+++ b/example/index.html
@@ -1,23 +1,10 @@
 <!DOCTYPE html>
 <html lang="en"><head>
 	<meta charset="utf-8">
-	<title>Search</title>
+	<title>Bullets</title>
 	<link rel="stylesheet" href="css/bullets.css">
 	<link rel="stylesheet" href="css/raster.css">
 	<link rel="stylesheet" href="css/style.css">
-	<script id="file-template" type="text/x-handlebars-template">
-		<section>
-			<header>
-				<h5><a href="file://{{filePath}}">{{displayFilePath}}</a></h1>
-			</header>
-			<ul>
-			</ul>
-		</section>
-	</script>
-	<script id="line-template" type="text/x-handlebars-template">
-		<li><strong>{{number}}:</strong>{{{text}}}</li>
-	</script>
-	<script id="match-template" type="text/x-handlebars-template"><strong>{{text}}</strong></script>
 	<script type="text/javascript" src="js/handlebars.js"></script>
 	<script type="text/javascript" src="js/mousetrap.js"></script>
 	<script type="text/javascript" src="js/zepto.js"></script>
@@ -26,19 +13,27 @@
 	<script type="text/javascript" src="js/wcsearch_bullets.js"></script>
 </head>
 <body>
-
-
-
-<section>
-			<header>
-				<h5><a href="file:///Users/robenkleene/Development/Projects/Cocoa/Web Console/Web Console/Search/wcsearch/test/data/testfile.txt">testfile.txt</a></h5>
-			</header>
-			<ul>
-			<li><strong>1:</strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <strong>eiusmod</strong> tempor incididunt <strong>eiussfdsfmod</strong> ut labore et dolore magna aliqua.</li><li><strong>4:</strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <strong>eiusmod</strong> tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li><li><strong>6:</strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <strong>eiusmod</strong> tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li><li><strong>8:</strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <strong>eiusmod</strong> tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li></ul>
-		</section><section>
-			<header>
-				<h5><a href="file:///Users/robenkleene/Development/Projects/Cocoa/Web Console/Web Console/Search/wcsearch/test/data/testfile2.txt">testfile2.txt</a></h5>
-			</header>
-			<ul>
-			<li><strong>1:</strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <strong>eiusmod</strong> tempor incididunt <strong>eiussfdsfmod</strong> ut labore et dolore magna aliqua.</li><li><strong>4:</strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <strong>eiusmod</strong> tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li><li><strong>6:</strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <strong>eiusmod</strong> tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li><li><strong>8:</strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <strong>eiusmod</strong> tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li></ul>
-		</section></body></html>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">First anchor</a></h5>
+		</header>
+		<ul>
+			<li>First list item</li>
+			<li>Second list item</li>
+			<li>Third list item</li>
+			<li>Fourth list item</li>
+		</ul>
+	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">Second anchor</a></h5>
+		</header>
+		<ul>
+			<li>Fifth list item</li>
+			<li>Sixth list item</li>
+			<li>Seventh list item</li>
+			<li>Eight list item</li>
+		</ul>
+	</section>
+</body>
+</html>
