Added following the selected link

--- a/example/index.html
+++ b/example/index.html
@@ -37,5 +37,203 @@
 			<li>Eight list item</li>
 		</ul>
 	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">First anchor</a></h5>
+		</header>
+		<ul>
+			<li>First list item</li>
+			<li>Second list item</li>
+			<li>Third list item</li>
+			<li>Fourth list item</li>
+		</ul>
+	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">Second anchor</a></h5>
+		</header>
+		<ul>
+			<li>Fifth list item</li>
+			<li>Sixth list item</li>
+			<li>Seventh list item</li>
+			<li>Eight list item</li>
+		</ul>
+	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">First anchor</a></h5>
+		</header>
+		<ul>
+			<li>First list item</li>
+			<li>Second list item</li>
+			<li>Third list item</li>
+			<li>Fourth list item</li>
+		</ul>
+	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">Second anchor</a></h5>
+		</header>
+		<ul>
+			<li>Fifth list item</li>
+			<li>Sixth list item</li>
+			<li>Seventh list item</li>
+			<li>Eight list item</li>
+		</ul>
+	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">First anchor</a></h5>
+		</header>
+		<ul>
+			<li>First list item</li>
+			<li>Second list item</li>
+			<li>Third list item</li>
+			<li>Fourth list item</li>
+		</ul>
+	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">Second anchor</a></h5>
+		</header>
+		<ul>
+			<li>Fifth list item</li>
+			<li>Sixth list item</li>
+			<li>Seventh list item</li>
+			<li>Eight list item</li>
+		</ul>
+	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">First anchor</a></h5>
+		</header>
+		<ul>
+			<li>First list item</li>
+			<li>Second list item</li>
+			<li>Third list item</li>
+			<li>Fourth list item</li>
+		</ul>
+	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">Second anchor</a></h5>
+		</header>
+		<ul>
+			<li>Fifth list item</li>
+			<li>Sixth list item</li>
+			<li>Seventh list item</li>
+			<li>Eight list item</li>
+		</ul>
+	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">First anchor</a></h5>
+		</header>
+		<ul>
+			<li>First list item</li>
+			<li>Second list item</li>
+			<li>Third list item</li>
+			<li>Fourth list item</li>
+		</ul>
+	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">Second anchor</a></h5>
+		</header>
+		<ul>
+			<li>Fifth list item</li>
+			<li>Sixth list item</li>
+			<li>Seventh list item</li>
+			<li>Eight list item</li>
+		</ul>
+	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">First anchor</a></h5>
+		</header>
+		<ul>
+			<li>First list item</li>
+			<li>Second list item</li>
+			<li>Third list item</li>
+			<li>Fourth list item</li>
+		</ul>
+	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">Second anchor</a></h5>
+		</header>
+		<ul>
+			<li>Fifth list item</li>
+			<li>Sixth list item</li>
+			<li>Seventh list item</li>
+			<li>Eight list item</li>
+		</ul>
+	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">First anchor</a></h5>
+		</header>
+		<ul>
+			<li>First list item</li>
+			<li>Second list item</li>
+			<li>Third list item</li>
+			<li>Fourth list item</li>
+		</ul>
+	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">Second anchor</a></h5>
+		</header>
+		<ul>
+			<li>Fifth list item</li>
+			<li>Sixth list item</li>
+			<li>Seventh list item</li>
+			<li>Eight list item</li>
+		</ul>
+	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">First anchor</a></h5>
+		</header>
+		<ul>
+			<li>First list item</li>
+			<li>Second list item</li>
+			<li>Third list item</li>
+			<li>Fourth list item</li>
+		</ul>
+	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">Second anchor</a></h5>
+		</header>
+		<ul>
+			<li>Fifth list item</li>
+			<li>Sixth list item</li>
+			<li>Seventh list item</li>
+			<li>Eight list item</li>
+		</ul>
+	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">First anchor</a></h5>
+		</header>
+		<ul>
+			<li>First list item</li>
+			<li>Second list item</li>
+			<li>Third list item</li>
+			<li>Fourth list item</li>
+		</ul>
+	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">Second anchor</a></h5>
+		</header>
+		<ul>
+			<li>Fifth list item</li>
+			<li>Sixth list item</li>
+			<li>Seventh list item</li>
+			<li>Eight list item</li>
+		</ul>
+	</section>
 </body>
 </html>
