Refactored bullets to use focus and blur

--- a/example/index.html
+++ b/example/index.html
@@ -39,178 +39,156 @@
 	</section>
 	<section>
 		<header>
-			<h5><a href="http://www.google.com">First anchor</a></h5>
+			<h5><a href="http://www.google.com">Third anchor</a></h5>
 		</header>
 		<ul>
-			<li>First list item</li>
-			<li>Second list item</li>
-			<li>Third list item</li>
-			<li>Fourth list item</li>
+			<li>Ninth list item</li>
+			<li>Tenth list item</li>
+			<li>11 list item</li>
+			<li>12 list item</li>
 		</ul>
 	</section>
 	<section>
 		<header>
-			<h5><a href="http://www.google.com">Second anchor</a></h5>
+			<h5><a href="http://www.google.com">Fourth anchor</a></h5>
 		</header>
 		<ul>
-			<li>Fifth list item</li>
-			<li>Sixth list item</li>
-			<li>Seventh list item</li>
-			<li>Eight list item</li>
+			<li>13 list item</li>
+			<li>14 list item</li>
+			<li>15 list item</li>
+			<li>16 list item</li>
 		</ul>
 	</section>
 	<section>
 		<header>
-			<h5><a href="http://www.google.com">First anchor</a></h5>
+			<h5><a href="http://www.google.com">Fifth anchor</a></h5>
 		</header>
 		<ul>
-			<li>First list item</li>
-			<li>Second list item</li>
-			<li>Third list item</li>
-			<li>Fourth list item</li>
+			<li>17 list item</li>
+			<li>18 list item</li>
+			<li>19 list item</li>
+			<li>20 list item</li>
 		</ul>
 	</section>
 	<section>
 		<header>
-			<h5><a href="http://www.google.com">Second anchor</a></h5>
+			<h5><a href="http://www.google.com">Sixth anchor</a></h5>
 		</header>
 		<ul>
-			<li>Fifth list item</li>
-			<li>Sixth list item</li>
-			<li>Seventh list item</li>
-			<li>Eight list item</li>
+			<li>21 list item</li>
+			<li>22 list item</li>
+			<li>23 list item</li>
+			<li>24 list item</li>
 		</ul>
 	</section>
 	<section>
 		<header>
-			<h5><a href="http://www.google.com">First anchor</a></h5>
+			<h5><a href="http://www.google.com">Seventh anchor</a></h5>
 		</header>
 		<ul>
-			<li>First list item</li>
-			<li>Second list item</li>
-			<li>Third list item</li>
-			<li>Fourth list item</li>
+			<li>25 list item</li>
+			<li>26 list item</li>
+			<li>27 list item</li>
+			<li>28 list item</li>
 		</ul>
 	</section>
 	<section>
 		<header>
-			<h5><a href="http://www.google.com">Second anchor</a></h5>
+			<h5><a href="http://www.google.com">Eight anchor</a></h5>
 		</header>
 		<ul>
-			<li>Fifth list item</li>
-			<li>Sixth list item</li>
-			<li>Seventh list item</li>
-			<li>Eight list item</li>
+			<li>29 list item</li>
+			<li>30 list item</li>
+			<li>31 list item</li>
+			<li>32 list item</li>
 		</ul>
 	</section>
 	<section>
 		<header>
-			<h5><a href="http://www.google.com">First anchor</a></h5>
+			<h5><a href="http://www.google.com">Ninth anchor</a></h5>
 		</header>
 		<ul>
-			<li>First list item</li>
-			<li>Second list item</li>
-			<li>Third list item</li>
-			<li>Fourth list item</li>
+			<li>33 list item</li>
+			<li>34 list item</li>
+			<li>35 list item</li>
+			<li>36 list item</li>
 		</ul>
 	</section>
 	<section>
 		<header>
-			<h5><a href="http://www.google.com">Second anchor</a></h5>
+			<h5><a href="http://www.google.com">Tenth anchor</a></h5>
 		</header>
 		<ul>
-			<li>Fifth list item</li>
-			<li>Sixth list item</li>
-			<li>Seventh list item</li>
-			<li>Eight list item</li>
+			<li>37 list item</li>
+			<li>38 list item</li>
+			<li>39 list item</li>
+			<li>40 list item</li>
 		</ul>
 	</section>
 	<section>
 		<header>
-			<h5><a href="http://www.google.com">First anchor</a></h5>
+			<h5><a href="http://www.google.com">11 anchor</a></h5>
 		</header>
 		<ul>
-			<li>First list item</li>
-			<li>Second list item</li>
-			<li>Third list item</li>
-			<li>Fourth list item</li>
+			<li>41 list item</li>
+			<li>42 list item</li>
+			<li>43 list item</li>
+			<li>44 list item</li>
 		</ul>
 	</section>
 	<section>
 		<header>
-			<h5><a href="http://www.google.com">Second anchor</a></h5>
+			<h5><a href="http://www.google.com">12 anchor</a></h5>
 		</header>
 		<ul>
-			<li>Fifth list item</li>
-			<li>Sixth list item</li>
-			<li>Seventh list item</li>
-			<li>Eight list item</li>
+			<li>45 list item</li>
+			<li>46 list item</li>
+			<li>47 list item</li>
+			<li>48 list item</li>
 		</ul>
 	</section>
 	<section>
 		<header>
-			<h5><a href="http://www.google.com">First anchor</a></h5>
+			<h5><a href="http://www.google.com">13 anchor</a></h5>
 		</header>
 		<ul>
-			<li>First list item</li>
-			<li>Second list item</li>
-			<li>Third list item</li>
-			<li>Fourth list item</li>
+			<li>49 list item</li>
+			<li>50 list item</li>
+			<li>51 list item</li>
+			<li>52 list item</li>
 		</ul>
 	</section>
 	<section>
 		<header>
-			<h5><a href="http://www.google.com">Second anchor</a></h5>
+			<h5><a href="http://www.google.com">14 anchor</a></h5>
 		</header>
 		<ul>
-			<li>Fifth list item</li>
-			<li>Sixth list item</li>
-			<li>Seventh list item</li>
-			<li>Eight list item</li>
+			<li>53 list item</li>
+			<li>54 list item</li>
+			<li>55 list item</li>
+			<li>56 list item</li>
 		</ul>
 	</section>
 	<section>
 		<header>
-			<h5><a href="http://www.google.com">First anchor</a></h5>
+			<h5><a href="http://www.google.com">15 anchor</a></h5>
 		</header>
 		<ul>
-			<li>First list item</li>
-			<li>Second list item</li>
-			<li>Third list item</li>
-			<li>Fourth list item</li>
+			<li>57 list item</li>
+			<li>58 list item</li>
+			<li>59 list item</li>
+			<li>60 list item</li>
 		</ul>
 	</section>
 	<section>
 		<header>
-			<h5><a href="http://www.google.com">Second anchor</a></h5>
+			<h5><a href="http://www.google.com">16 anchor</a></h5>
 		</header>
 		<ul>
-			<li>Fifth list item</li>
-			<li>Sixth list item</li>
-			<li>Seventh list item</li>
-			<li>Eight list item</li>
-		</ul>
-	</section>
-	<section>
-		<header>
-			<h5><a href="http://www.google.com">First anchor</a></h5>
-		</header>
-		<ul>
-			<li>First list item</li>
-			<li>Second list item</li>
-			<li>Third list item</li>
-			<li>Fourth list item</li>
-		</ul>
-	</section>
-	<section>
-		<header>
-			<h5><a href="http://www.google.com">Second anchor</a></h5>
-		</header>
-		<ul>
-			<li>Fifth list item</li>
-			<li>Sixth list item</li>
-			<li>Seventh list item</li>
-			<li>Eight list item</li>
+			<li>61 list item</li>
+			<li>62 list item</li>
+			<li>63 list item</li>
+			<li>64 list item</li>
 		</ul>
 	</section>
 	<section>
@@ -218,21 +196,43 @@
 			<h5><a href="http://www.google.com">First anchor</a></h5>
 		</header>
 		<ul>
-			<li>First list item</li>
-			<li>Second list item</li>
-			<li>Third list item</li>
-			<li>Fourth list item</li>
+			<li>65 list item</li>
+			<li>66 list item</li>
+			<li>67 list item</li>
+			<li>68 list item</li>
 		</ul>
 	</section>
 	<section>
 		<header>
-			<h5><a href="http://www.google.com">Second anchor</a></h5>
+			<h5><a href="http://www.google.com">17 anchor</a></h5>
 		</header>
 		<ul>
-			<li>Fifth list item</li>
-			<li>Sixth list item</li>
-			<li>Seventh list item</li>
-			<li>Eight list item</li>
+			<li>69 list item</li>
+			<li>70 list item</li>
+			<li>71 list item</li>
+			<li>72 list item</li>
+		</ul>
+	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">18 anchor</a></h5>
+		</header>
+		<ul>
+			<li>73 list item</li>
+			<li>74 list item</li>
+			<li>75 list item</li>
+			<li>76 list item</li>
+		</ul>
+	</section>
+	<section>
+		<header>
+			<h5><a href="http://www.google.com">19 anchor</a></h5>
+		</header>
+		<ul>
+			<li>77 list item</li>
+			<li>78 list item</li>
+			<li>79 list item</li>
+			<li>80 list item</li>
 		</ul>
 	</section>
 </body>
