Removed references to wcsearch

--- a/example/index.html
+++ b/example/index.html
@@ -9,8 +9,7 @@
     <script src="./js/handlebars.js"></script>
     <script src="./js/jquery.js"></script>
     <script src="./js/mousetrap.js"></script>
-    <script src="./js/wcsearch_bullets.js"></script>
-    <script src="./js/wcsearch.js"></script>
+    <script src="./js/mousetrap_config.js"></script>
     <script src="./../bullets.js"></script>
   </head>
   <body>
