Start removing jQuery

--- a/example/index.html
+++ b/example/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/raster.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/handlebars.js"></script>
-    <script src="./js/jquery.js"></script>
+    <!-- script(src=resourceBasePath + 'js/jquery.js')-->
     <script src="./js/mousetrap.js"></script>
     <script src="./js/mousetrap_config.js"></script>
     <script src="./../bullets.js"></script>
