--- a/test/lib/index.html
+++ b/test/lib/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../example/css/raster.css">
     <link rel="stylesheet" href="../../example/css/style.css">
     <script src="../../example/js/handlebars.js"></script>
-    <script src="../../example/js/jquery.js"></script>
+    <!-- script(src=resourceBasePath + 'js/jquery.js')-->
     <script src="../../example/js/mousetrap.js"></script>
     <script src="../../example/js/mousetrap_config.js"></script>
     <script src="../../example/../bullets.js"></script>
