--- a/test/lib/jade/mocha.html
+++ b/test/lib/jade/mocha.html
@@ -2,6 +2,8 @@
 	<div id="mocha"></div>
 	<script src="js/mocha.js"></script>
 	<script src="js/chai.js"></script>
+	<script src="js/sinon.js"></script>
+	<script src="js/sinon-chai.js"></script>
 	<script>
 	  mocha.ui('bdd');
 	  mocha.reporter('html');
