--- a/test/lib/index.html
+++ b/test/lib/index.html
@@ -138,6 +138,8 @@
 	<div id="mocha"></div>
 	<script src="js/mocha.js"></script>
 	<script src="js/chai.js"></script>
+	<script src="js/sinon.js"></script>
+	<script src="js/sinon-chai.js"></script>
 	<script>
 	  mocha.ui('bdd');
 	  mocha.reporter('html');
@@ -149,5 +151,6 @@
 	  if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
 	  else { mocha.run(); }
 	</script>
+
   </body>
 </html>
