Replace chai with node modules version

--- a/test/lib/index.html
+++ b/test/lib/index.html
@@ -5,6 +5,7 @@
     <title>Bullets Tests</title>
     <script src="js/test_helper.js"></script>
     <script src="../../node_modules/mocha/mocha.js"></script>
+    <script src="../../node_modules/chai/chai.js"></script>
     <link rel="stylesheet" href="../../node_modules/mocha/mocha.css">
     <link rel="stylesheet" href="../../example/css/bullets.css">
     <link rel="stylesheet" href="../../example/css/raster.css">
@@ -135,7 +136,6 @@
       </header>
     </section>
 	<div id="mocha"></div>
-	<script src="js/chai.js"></script>
 	<script src="js/sinon.js"></script>
 	<script src="js/sinon-chai.js"></script>
 	<script>
