--- a/test/lib/index.html
+++ b/test/lib/index.html
@@ -6,6 +6,7 @@
     <script src="js/test_helper.js"></script>
     <script src="../../node_modules/mocha/mocha.js"></script>
     <script src="../../node_modules/chai/chai.js"></script>
+    <script src="../../node_modules/sinon/pkg/sinon.js"></script>
     <link rel="stylesheet" href="../../node_modules/mocha/mocha.css">
     <link rel="stylesheet" href="../../example/css/bullets.css">
     <link rel="stylesheet" href="../../example/css/raster.css">
@@ -136,7 +137,6 @@
       </header>
     </section>
 	<div id="mocha"></div>
-	<script src="js/sinon.js"></script>
 	<script src="js/sinon-chai.js"></script>
 	<script>
 	  mocha.ui('bdd');
