Use node sinon chai

--- a/test/lib/index.html
+++ b/test/lib/index.html
@@ -7,6 +7,7 @@
     <script src="../../node_modules/mocha/mocha.js"></script>
     <script src="../../node_modules/chai/chai.js"></script>
     <script src="../../node_modules/sinon/pkg/sinon.js"></script>
+    <script src="../../node_modules/sinon-chai/lib/sinon-chai.js"></script>
     <link rel="stylesheet" href="../../node_modules/mocha/mocha.css">
     <link rel="stylesheet" href="../../example/css/bullets.css">
     <link rel="stylesheet" href="../../example/css/raster.css">
@@ -137,7 +138,6 @@
       </header>
     </section>
 	<div id="mocha"></div>
-	<script src="js/sinon-chai.js"></script>
 	<script>
 	  mocha.ui('bdd');
 	  mocha.reporter('html');
