Setup gulp browserify

--- a/test/src/jade/mocha.html
+++ b/test/src/jade/mocha.html
@@ -5,7 +5,7 @@
 	  mocha.reporter('html');
 	  var should = chai.should();
 	</script>
-	<script src="../lib/tests/test.js"></script>
+	<script src="js/tests.js"></script>
 	<script>
 	  if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
 	  else { mocha.run(); }
